fix footer overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,7 +122,7 @@ footer {
   background-color: #FF7204;
   border-top: 1px solid black;
   text-align: center;
-  position: absolute;
+  /*position: absolute;*/
   left: 0;
   bottom: 0;
   height: 75px;
